# Shift_Elites_Database

./: .gitignore  README.md  package.json  render.yaml  vercel.json
api/: index.js
backend/: .dockerignore  CMakeLists.txt  Dockerfile  railway.json
backend/src/: main.cpp
backend/src/catalog/: catalog.h
backend/src/server/: server.h
backend/src/sql/: ast.h  executor.h  parser.h  tokenizer.h
backend/src/storage/: buffer_pool.h  disk_manager.h  page.h  table.h
backend/src/types/: types.h
docs/latex/: 01-introduction.tex  02-architecture.tex  03-storage-engine.tex  04-indexing.tex  05-sql-parser.tex  06-query-optimizer.tex  07-transaction-manager.tex  08-mvcc.tex  09-buffer-management.tex  10-wal-recovery.tex  11-web-interface.tex  12-performance.tex  appendix-a-algorithms.tex  appendix-b-interview-prep.tex  bibliography.bib  main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.tex  main.toc  preamble.tex
frontend/: .env.example  index.html  package-lock.json  package.json  server.cjs  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandPalette.tsx
frontend/src/components/builder/: VisualQueryBuilder.tsx
frontend/src/components/editor/: SqlEditor.tsx
frontend/src/components/history/: QueryHistory.tsx
frontend/src/components/monitoring/: Monitoring.tsx
frontend/src/components/results/: DataGrid.tsx  QueryPlanVisualizer.tsx
frontend/src/components/schema/: ERDiagram.tsx  (+1 more)
frontend/src/lib/: api.ts
frontend/src/stores/: index.ts
frontend/src/types/: react-resizable-panels.d.ts
